--- a/frontend/modal_contents/side_menu/styles/side_menu_connected.css
+++ b/frontend/modal_contents/side_menu/styles/side_menu_connected.css
@@ -33,6 +33,7 @@
 	position: relative;
 	aspect-ratio: 1/1;
 	border-radius: 50%;
+	object-fit: cover
 }
 
 #smc-connection-badge
